@@ -1,3 +1,12 @@
+2004-10-15  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf-eh-frame.c (_bfd_elf_eh_frame_section_offset): Add "info"
+	parameter.  If called after _bfd_elf_write_section_eh_frame,
+	don't allow a -2 return unless need_* bit is already set, and
+	handle offsets adjusted for output_offset.
+	* elf-bfd.h (_bfd_elf_eh_frame_section_offset): Update prototype.
+	* elf.c (_bfd_elf_section_offset): Update call.
+
 2004-10-13  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR 440
